--- a/Fahrradverleih_MN/.classpath
+++ b/Fahrradverleih_MN/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/xampp/tomcat/lib/servlet-api.jar" sourcepath="C:/xampp/tomcat/apache-tomcat-7.0.96-src.zip"/>
+	<classpathentry kind="lib" path="C:/xampp/tomcat/lib/mysql-connector-java-8.0.17.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
